store token in local storage

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
-
-
-
+FRONTEND_URL=http://localhost:5181
+MONGO_URL=mongodb+srv://typingspeed123:typing123%40@cluster0.u063ipp.mongodb.net/
+JWT_SECRET =d571e4fd476cba20727c9b45fef863ad
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=alexverner000@gmail.com
+EMAIL_PASS=alycrsdnadgwimod
